fixing navbar spacing

--- a/ecommerce/src/styles/style.css
+++ b/ecommerce/src/styles/style.css
@@ -8,6 +8,9 @@ body {
   background-color: #dbd1db;
 }
 
+@media(min-width:1024) {
+  
+}
 h1 {
   text-align: center;
   font-size: 4rem;
@@ -125,7 +128,7 @@ nav {
 
 .navSpacer {
   display: flex;
-  margin-left: 90%;
+  margin-left: 80%;
 }
 .shoppingCartPopup {
   position: absolute;
@@ -135,6 +138,9 @@ nav {
   background-color: white;
   border: 5px solid gray;
   text-align: center;
+  transform:(translateX(100%));
+  transition: .3s ease-out;
+  z-index: 99;
 }
 
 .shoppingCartPopupItem {
@@ -142,8 +148,11 @@ nav {
   flex-direction: row;
   justify-content: center;
   border-bottom: 1px solid black;
+
 }
 
 .shoppingCartPopupItem img {
   width: 100px;
 }
+
+
